# profi-bot

./: .gitignore  README.md  pyproject.toml
app/: database_console.py  logging_config.py  main.py
app/bot/: base_bot.py  bot_messages.py  raw_messages.py  telegram_bot.py
app/bot/constants/: bot_messages.py  messages.py
app/bot/constants/telegram/: callback_data.py  conversation.py  keyboards.py
app/bot/telegram/: bot.py  callback_data.py  decorators.py  keyboards.py  test_adapter.py
app/cache_storage/: cache_storage.py  user_data.py
app/db/: base_database.py  sqlite3_db.py
app/neural_network/: base_neural_network.py  gigachat.py
app/neural_network/constants/: prompts.py
app/neural_network/gigachat/: gigachat.py  prompts.py
app/tests/: base_test.py
app/tests/gigachat_test/: description.py  gigachat_test.py
app/tests/review/: description.py  review.py
