[tool.poetry]
name = "profi-bot"
version = "0.1.0"
description = ""
authors = ["nisakoo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.7"
python-dotenv = "^1.0.0"
gigachain = "^0.0.351"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
